--- a/index.html
+++ b/index.html
@@ -12,24 +12,24 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>JavaScript编程入门</h1>
+      <h1>段颖志的JS学习过程笔记</h1>
     </div>
   </div>
   <div class="container">
     <div class="col-md-8 col-md-offset-2">
       <div class="panel panel-default">
         <div class="panel-heading">
-          <h3 class="panel-title">JavaScript编程入门</h3>
+          <h3 class="panel-title">Lesson1</h3>
         </div>
         <div class="panel-body">
           <li class="list-group-item">
-            <a href="https://xugy0926.github.io/getting-started-with-javascript/">
-              新生大学JS编程入门项目[getting-started-with-javascript]
+            <a href="https://github.com/updateyz/duanyingzhi/">
+              我的项目[getting-started-with-javascript]
             </a>
           </li>
           <li class="list-group-item">
-            <a href="https://github.com/xugy0926/words-from-the-heart">
-              新生大学JS编程入门心里话[getting-started-with-javascript]
+            <a href="https://github.com/updateyz/duanyingzhi">
+              我的心里话[getting-started-with-javascript]
             </a>
           </li>
         </div>
