--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 <div>
   <div class="main-header">
     <div class="container">
-      <h1>段颖志的JS学习过程笔记</h1>
+        <div class="panel-body">
+            <h1>段颖志的JS学习过程笔记</h1>
     </div>
   </div>
   <div class="container">
