--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
           </li>
           <li class="list-group-item">
             <a href="https://github.com/updateyz/duanyingzhi">
+              我的总结[getting-started-with-javascript]
+            </a>
+          </li>
+          <li class="list-group-item">
+            <a href="https://github.com/updateyz/duanyingzhi">
               我的心里话[getting-started-with-javascript]
             </a>
           </li>
