--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
         <div class="panel-body">
           <li class="list-group-item">
             <a href="https://github.com/updateyz/duanyingzhi/">
-              我的项目[getting-started-with-javascript]
+              我的项目
             </a>
           </li>
           <li class="list-group-item">
             <a href="https://github.com/updateyz/duanyingzhi">
-              我的总结[getting-started-with-javascript]
+              我的总结
             </a>
           </li>
           <li class="list-group-item">
             <a href="https://github.com/updateyz/duanyingzhi">
-              我的心里话[getting-started-with-javascript]
+              我的心里话
             </a>
           </li>
         </div>
